Increase min height to fix height shift issue

--- a/202406_rockpaperscissors/css/styles.css
+++ b/202406_rockpaperscissors/css/styles.css
@@ -68,11 +68,11 @@ h2 {
 }
 
 #choice-buttons-wrapper {
-  min-height: 100px;
+  min-height: 120px;
 }
 
 #next-round-wrapper {
-  min-height: 100px;
+  min-height: 120px;
 }
 
 #choice-buttons {
